[gd_scene load_steps=25 format=2]

[ext_resource path="res://sprites/scene/door_closed.png" type="Texture" id=1]
[ext_resource path="res://sprites/scene/door_open.png" type="Texture" id=2]
[ext_resource path="res://sprites/scene/wall_dc.png" type="Texture" id=3]
[ext_resource path="res://sprites/scene/wall_light_normal.png" type="Texture" id=4]
[ext_resource path="res://sprites/scene/wall_light.png" type="Texture" id=5]
[ext_resource path="res://sprites/scene/lustra.png" type="Texture" id=6]
[ext_resource path="res://scripts/wall_ul.gd" type="Script" id=7]
[ext_resource path="res://sounds/lamp_noise.ogg" type="AudioStream" id=8]
[ext_resource path="res://sprites/people_background/3.png" type="Texture" id=9]
[ext_resource path="res://sprites/people_background/5.png" type="Texture" id=10]
[ext_resource path="res://sprites/people_background/4.png" type="Texture" id=11]
[ext_resource path="res://sprites/people_background/7.png" type="Texture" id=12]
[ext_resource path="res://sprites/people_background/6.png" type="Texture" id=13]
[ext_resource path="res://sprites/people_background/2.png" type="Texture" id=14]
[ext_resource path="res://sprites/people_background/1.png" type="Texture" id=15]
[ext_resource path="res://sounds/tolpa2.ogg" type="AudioStream" id=16]
[ext_resource path="res://scripts/wall_dc.gd" type="Script" id=17]
[ext_resource path="res://sprites/dialog_box/dialog_box.png" type="Texture" id=18]
[ext_resource path="res://texts/dialogueFont.tres" type="DynamicFont" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 142.5, 58 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.9231, 37 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "queue",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="wall_up-left" type="Node2D"]
scale = Vector2( 1.00351, 1 )
script = ExtResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 31
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="wall_dc" type="Sprite" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 3 )
script = ExtResource( 17 )

[node name="door_closed" type="Sprite" parent="wall_dc"]
position = Vector2( -68.7587, 8 )
texture = ExtResource( 1 )

[node name="open_anim" type="AnimatedSprite" parent="wall_dc"]
position = Vector2( -68.7587, 8 )
frames = SubResource( 2 )
animation = "open"

[node name="Area2D" type="Area2D" parent="wall_dc/open_anim"]

[node name="call_new" type="CollisionShape2D" parent="wall_dc/open_anim/Area2D"]
position = Vector2( 3.8147e-05, 1 )
shape = SubResource( 3 )

[node name="queue" type="Node2D" parent="wall_dc"]
position = Vector2( 0.996502, 11 )

[node name="queue1" type="AnimatedSprite" parent="wall_dc/queue"]
position = Vector2( -9.96502, 0 )
frames = SubResource( 4 )
animation = "queue"
frame = 1

[node name="queue2" type="AnimatedSprite" parent="wall_dc/queue"]
position = Vector2( 23.9161, 0 )
frames = SubResource( 4 )
animation = "queue"
frame = 2

[node name="queue3" type="AnimatedSprite" parent="wall_dc/queue"]
position = Vector2( -130.542, 0 )
frames = SubResource( 4 )
animation = "queue"
frame = 6
flip_h = true

[node name="queue4" type="AnimatedSprite" parent="wall_dc/queue"]
position = Vector2( 88.6887, 0 )
frames = SubResource( 4 )
animation = "queue"
flip_h = true

[node name="tolpa" type="AudioStreamPlayer" parent="wall_dc/queue"]
stream = ExtResource( 16 )
volume_db = -19.981

[node name="lustra_1" type="Sprite" parent="."]
position = Vector2( -5.96046e-07, -49 )
scale = Vector2( 1.06294, 1 )
texture = ExtResource( 6 )

[node name="light" type="AnimatedSprite" parent="lustra_1"]
position = Vector2( -2.812, 49.25 )
scale = Vector2( 1, 0.995 )
frames = SubResource( 5 )

[node name="lustra_2" type="Sprite" parent="."]
position = Vector2( 95.6642, -49 )
scale = Vector2( 1.06294, 1 )
texture = ExtResource( 6 )

[node name="light" type="AnimatedSprite" parent="lustra_2"]
position = Vector2( -2.8125, 49.25 )
scale = Vector2( 1, 0.994898 )
frames = SubResource( 5 )

[node name="lustra_3" type="Sprite" parent="."]
position = Vector2( -97.6572, -49 )
scale = Vector2( 1.06294, 1 )
texture = ExtResource( 6 )

[node name="light" type="AnimatedSprite" parent="lustra_3"]
position = Vector2( -2.812, 49.25 )
scale = Vector2( 1, 0.995 )
frames = SubResource( 5 )

[node name="noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -26.0

[node name="dialog_box" type="Sprite" parent="."]
visible = false
position = Vector2( -2.78639, -14.6796 )
texture = ExtResource( 18 )

[node name="next_scream" type="Label" parent="dialog_box"]
margin_left = -46.0
margin_top = -9.0
margin_right = 50.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "NEXT!!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
